--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "json-server": "json-server --watch ./src/data/db.json --port 3000",
-    "server": "node ./src/server/server.js"
+    "server": "node ./src/server/server.js",
+    "start": "concurrently \"npm run dev\" \"npm run server\" \"npm run json-server\""
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "concurrently": "^9.2.1",
     "vite": "^7.1.2"
   }
 }
