--- a/package.json
+++ b/package.json
@@ -2,38 +2,15 @@
   "name": "sancheznogueira",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "json-server": "json-server --watch ./src/data/db.json --port 3000",
-    "server": "node ./src/server/server.js",
-    "start": "concurrently \"npm run dev\" \"npm run server\" \"npm run json-server\""
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^7.0.1",
-    "@google/generative-ai": "^0.24.1",
-    "axios": "^1.12.2",
-    "bcryptjs": "^3.0.3",
-    "bootstrap": "^5.3.8",
-    "bootstrap-icons": "^1.13.1",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "json-server": "^1.0.0-beta.3",
-    "jsonwebtoken": "^9.0.2",
-    "jwt-decode": "^4.0.0",
-    "mongoose": "^8.19.2",
-    "multer": "^2.0.2",
-    "resend": "^6.6.0",
-    "sweetalert2": "^11.23.0",
-    "vue": "^3.5.18",
-    "vue-router": "^4.6.3"
+    "dev:frontend": "cd frontend && npm run dev",
+    "dev:backend": "cd backend && npm run server",
+    "dev:json": "cd frontend && npm run json-server",
+    "start": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\" \"npm run dev:json\"",
+    "build": "cd frontend && npm run build",
+    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^6.0.1",
-    "concurrently": "^9.2.1",
-    "vite": "^7.1.2"
+    "concurrently": "^9.2.1"
   }
 }
