--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "json-server": "json-server --watch ./src/data/db.json --port 3000"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
@@ -22,7 +21,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
-    "json-server": "^1.0.0-beta.3",
     "vite": "^7.1.2"
   }
 }
