--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd backend && npm run server",
-    "dev:json": "cd frontend && npm run json-server",
+    "dev:json": "cd backend && npm run json-server",
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\" \"npm run dev:json\"",
     "start": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\" \"npm run dev:json\"",
     "build": "cd frontend && npm run build",
     "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install"
