--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "jwt-decode": "^4.0.0",
     "sweetalert2": "^11.23.0",
     "vue": "^3.5.18",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
