--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,13 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
+    "pinia": "^3.0.4",
     "sweetalert2": "^11.23.0",
     "vue": "^3.5.18",
-    "vue-router": "^4.6.3",
-    "jspdf": "^3.0.4",
-    "jspdf-autotable": "^5.0.2"
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
