--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
     "multer": "^2.0.2",
-    "resend": "^6.6.0"
+    "resend": "^6.6.0",
+    "stripe": "^20.1.2"
   }
 }
