--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     container_name: sancheznogueira-mongodb
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password123
-      MONGO_INITDB_DATABASE: sancheznogueira
+      MONGO_INITDB_ROOT_USERNAME: ${MONGODB_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGODB_PWD}
+      MONGO_INITDB_DATABASE: ${MONGODB_NAME}
     ports:
       - "27017:27017"
     volumes:
@@ -21,7 +21,7 @@ services:
       timeout: 5s
       retries: 5
 
-  # Servicio del Backend (Express)
+  # Servicio del Backend
   backend:
     build:
       context: ./backend
@@ -31,22 +31,48 @@ services:
     environment:
       NODE_ENV: production
       PORT: 5000
-      MONGODB_URI: mongodb://admin:password123@mongodb:27017/sancheznogueira?authSource=admin
+      JSON_SERVER_URL: http://json-server:3000
+      MONGODB_URI: mongodb://admin:${MONGODB_PWD}@mongodb:27017/bbdd?authSource=admin
+      JWT_SECRET: ${JWT_SECRET}
+      RESEND_API_KEY: ${RESEND_API_KEY}
+      EMAIL_TO: ${EMAIL_TO}
+      GEMINI_API_KEY: ${GEMINI_API_KEY}
+      PAYPAL_CLIENT_ID: ${PAYPAL_CLIENT_ID}
+      PAYPAL_CLIENT_SECRET: ${PAYPAL_CLIENT_SECRET}
+      PAYPAL_MODE: ${PAYPAL_MODE}
+      STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
+      STRIPE_PUBLISHABLE_KEY: ${STRIPE_PUBLISHABLE_KEY}
     ports:
       - "5000:5000"
+    expose:
+      - "5000"
     depends_on:
       mongodb:
         condition: service_healthy
+      json-server:
+        condition: service_started
     volumes:
-      - ./backend:/app
+      - ./backend/model:/app/model
+      - ./backend/server:/app/server
       - /app/node_modules
     networks:
       - sancheznogueira-network
-    healthcheck:
-      test: curl -f http://localhost:5000/api/articulos || exit 1
-      interval: 30s
-      timeout: 10s
-      retries: 3
+
+  # Servicio del JSON Server
+  json-server:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: sancheznogueira-json-server
+    restart: always
+    command: npm run json-server
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./backend/server:/app/server
+      - /app/node_modules
+    networks:
+      - sancheznogueira-network
 
   # Servicio del Frontend (Vue + Vite)
   frontend:
@@ -55,14 +81,14 @@ services:
       dockerfile: Dockerfile
     container_name: sancheznogueira-frontend
     restart: always
-    environment:
-      VITE_API_URL: http://localhost:5000
     ports:
       - "5173:5173"
     depends_on:
       - backend
+      - json-server
     volumes:
-      - ./frontend:/app
+      - ./frontend/src:/app/src
+      - ./frontend/public:/app/public
       - /app/node_modules
     networks:
       - sancheznogueira-network
