--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\" \"npm run dev:json\"",
     "start": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\" \"npm run dev:json\"",
     "build": "cd frontend && npm run build",
-    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install"
+    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
+    "docker:reset": "docker-compose down && docker volume rm sancheznogueira_mongodb_data && docker-compose up --build"
   },
   "devDependencies": {
     "concurrently": "^9.2.1"
